--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "0.21.0",
     "react": "17.0.0",
     "react-dom": "17.0.0",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
