--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "0.21.0",
+    "query-string": "^6.13.7",
     "react": "17.0.0",
     "react-dom": "17.0.0",
     "react-router-dom": "5.2.0"
