--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "query-string": "^6.13.7",
     "react": "17.0.0",
     "react-dom": "17.0.0",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "react-scripts": "^4.0.1",
+    "typescript": "^3.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
