--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "axios": "0.21.0",
-    "query-string": "^6.13.7",
-    "react": "17.0.0",
-    "react-dom": "17.0.0",
-    "react-router-dom": "5.2.0",
-    "react-scripts": "^4.0.1",
-    "typescript": "^3.2.1"
+    "axios": "^0.21.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
